Update 'haez91jnl-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:789b21dbccfaa53606a900e6186ed25076d6a9b0@sha256:89d934ae49f1a1d2abed550e9bcd9498efe6db6dfd968f4dc1a72f44f9460370

--- a/components/haez91jnl-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/haez91jnl-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: haez91jnl-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:789b21dbccfaa53606a900e6186ed25076d6a9b0@sha256:89d934ae49f1a1d2abed550e9bcd9498efe6db6dfd968f4dc1a72f44f9460370
+          name: container-image
